Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,6 +3,9 @@ title: "Quickstart"
 description: "Start building awesome documentation in minutes"
 ---
 
+## Mobile Compatibility
+This application is optimized for Android devices using Google Chrome browser. The smallest supported screen width is 368px.
+
 ## Get started in three steps
 
 Get your documentation site running locally and make your first customization.
